--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.4', '8.0', '8.1']
+        php-versions: ['8.1']
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -74,3 +74,5 @@ jobs:
         run: php artisan migrate -v
         env:
           DB_PORT: ${{ job.services.postgres.ports[5432] }}
+          
+          
