--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -74,5 +74,11 @@ jobs:
         run: php artisan migrate -v
         env:
           DB_PORT: ${{ job.services.postgres.ports[5432] }}
-          
-          
+
+#node js
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.3.0
+        with:
+          # Version Spec of the version to use. Examples: 12.x, 10.15.1, >=10.15.0.
+          node-version: 15.x # optional
